sửa class Auction gọi database